<resources>
    <string name="app_name">Khodok\'s Blog</string>

    <string name="title">Quotes</string>
    <string name="description">Quotes are amazing</string>
    <string name="body">I am Vengeance ! I am The Night ! I am Batman !!!</string>
    <string name="published_date">Friday, 24 April 2020 17:17:00</string>
    <string name="post_id">Post #21</string>

    <string name="generic_error">Something went wrong.</string>
    <string name="action_settings">Settings</string>
    <string name="version">Version</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Khodok\'s Blog</string>
    <string name="nav_header_subtitle">Read at own risks</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="post_list">Post List</string>
    <string name="title_activity_post_detail_host">Post Detail Host Activity</string>
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="about">About</string>
    <string name="master_detail_test">Master/Detail Test</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about_card_title">About this app</string>
</resources>
